gcc/testsuite/rust/compile/issue-3541-1.rs
#![feature(no_core)]
#![no_core]

impl B for u32 {
    const BAR: i32; // { dg-error "associated constant in .impl." }
}

trait B {}
